--- a/PC/html/new/record_video.html
+++ b/PC/html/new/record_video.html
@@ -1279,22 +1279,30 @@
                                             <ul>
                                                 <li class="active items">
                                                     <a href="javascript:;" class="link">
-                                                        <img src="../../images/new/@img4.png" alt="" />
+                                                        <span class="img_wrap_01">
+                                                            <img src="../../images/new/@img4.png" alt="" />
+                                                        </span>
                                                     </a>
                                                 </li>
                                                 <li class="items">
                                                     <a href="javascript:;" class="link">
-                                                        <img src="../../images/new/@img6.png" alt="" />
+                                                        <span class="img_wrap_01">
+                                                            <img src="../../images/new/@img6.png" alt="" />
+                                                        </span>
                                                     </a>
                                                 </li>
                                                 <li class="items">
                                                     <a href="javascript:;" class="link">
-                                                        <img src="../../images/new/@img7.png" alt="" />
+                                                        <span class="img_wrap_01">
+                                                            <img src="../../images/new/@img7.png" alt="" />
+                                                        </span>
                                                     </a>
                                                 </li>
                                                 <li class="items">
                                                     <a href="javascript:;" class="link">
-                                                        <img src="../../images/new/@img8.png" alt="" />
+                                                        <span class="img_wrap_01">
+                                                            <img src="../../images/new/@img8.png" alt="" />
+                                                        </span>
                                                     </a>
                                                 </li>
                                             </ul>
@@ -1305,7 +1313,9 @@
                                                 <span class="theme_recommend_texts_wrap">
                                                     <span class="theme_recommend_img">
                                                         <a href="javascript:;" class="link">
-                                                            <img src="../../images/new/@img4.png" alt="" />
+                                                            <span class="img_wrap_01">
+                                                                <img src="../../images/new/@img4.png" alt="" />
+                                                            </span>
                                                         </a>
                                                     </span>
                                                     <span class="theme_recommend_texts">
@@ -1321,7 +1331,9 @@
                                                 <span class="theme_recommend_texts_wrap">
                                                     <span class="theme_recommend_img">
                                                         <a href="javascript:;" class="link">
-                                                            <img src="../../images/new/@img6.png" alt="" />
+                                                            <span class="img_wrap_01">
+                                                                <img src="../../images/new/@img6.png" alt="" />
+                                                            </span>
                                                         </a>
                                                     </span>
                                                     <span class="theme_recommend_texts">
@@ -1337,7 +1349,9 @@
                                                 <span class="theme_recommend_texts_wrap">
                                                     <span class="theme_recommend_img">
                                                         <a href="javascript:;" class="link">
-                                                            <img src="../../images/new/@img7.png" alt="" />
+                                                            <span class="img_wrap_01">
+                                                                <img src="../../images/new/@img7.png" alt="" />
+                                                            </span>
                                                         </a>
                                                     </span>
                                                     <span class="theme_recommend_texts">
@@ -1355,22 +1369,30 @@
                                             <ul>
                                                 <li class="active items">
                                                     <a href="javascript:;" class="link">
-                                                        <img src="../../images/new/@img4.png" alt="" />
+                                                        <span class="img_wrap_01">
+                                                            <img src="../../images/new/@img4.png" alt="" />
+                                                        </span>
                                                     </a>
                                                 </li>
                                                 <li class="items">
                                                     <a href="javascript:;" class="link">
-                                                        <img src="../../images/new/@img6.png" alt="" />
+                                                        <span class="img_wrap_01">
+                                                            <img src="../../images/new/@img6.png" alt="" />
+                                                        </span>
                                                     </a>
                                                 </li>
                                                 <li class="items">
                                                     <a href="javascript:;" class="link">
-                                                        <img src="../../images/new/@img7.png" alt="" />
+                                                        <span class="img_wrap_01">
+                                                            <img src="../../images/new/@img7.png" alt="" />
+                                                        </span>
                                                     </a>
                                                 </li>
                                                 <li class="items">
                                                     <a href="javascript:;" class="link">
-                                                        <img src="../../images/new/@img8.png" alt="" />
+                                                        <span class="img_wrap_01">
+                                                            <img src="../../images/new/@img8.png" alt="" />
+                                                        </span>
                                                     </a>
                                                 </li>
                                             </ul>
@@ -1381,7 +1403,9 @@
                                                 <span class="theme_recommend_texts_wrap">
                                                     <span class="theme_recommend_img">
                                                         <a href="javascript:;" class="link">
-                                                            <img src="../../images/new/@img4.png" alt="" />
+                                                            <span class="img_wrap_01">
+                                                                <img src="../../images/new/@img4.png" alt="" />
+                                                            </span>
                                                         </a>
                                                     </span>
                                                     <span class="theme_recommend_texts">
@@ -1397,7 +1421,9 @@
                                                 <span class="theme_recommend_texts_wrap">
                                                     <span class="theme_recommend_img">
                                                         <a href="javascript:;" class="link">
-                                                            <img src="../../images/new/@img6.png" alt="" />
+                                                            <span class="img_wrap_01">
+                                                                <img src="../../images/new/@img6.png" alt="" />
+                                                            </span>
                                                         </a>
                                                     </span>
                                                     <span class="theme_recommend_texts">
@@ -1413,7 +1439,9 @@
                                                 <span class="theme_recommend_texts_wrap">
                                                     <span class="theme_recommend_img">
                                                         <a href="javascript:;" class="link">
-                                                            <img src="../../images/new/@img7.png" alt="" />
+                                                            <span class="img_wrap_01">
+                                                                <img src="../../images/new/@img7.png" alt="" />
+                                                            </span>
                                                         </a>
                                                     </span>
                                                     <span class="theme_recommend_texts">
