--- a/PC/html/new/menu2_4.html
+++ b/PC/html/new/menu2_4.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTDXHTML1.0Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ko" xml:lang="ko">
 <head>
+    <!-- 태그 라이브러리 -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Script-Type" content="text/javascript">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=950">
-    <title>통합포인트/예치금/쿠폰 | 회원FAQ | 고객센터 - HOTTRACKS</title>
+    <title>세금계산서/증빙 | 주문FAQ | 고객센터 - HOTTRACKS</title>    
     <!-- 태그 라이브러리 -->
     <link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
 
@@ -236,8 +237,7 @@ $(document).ready(function(){
                 <div class="lnb">  
                     <!-- 201228 작업부분 -->
                     <!-- sub top -->
-                    <div class="page_location">
-                        <h2 class="title">
+                        <div class="page_location"> <h2 class="title">
                             <a href="javascript:;">고객센터</a>
                         </h2>
                     </div>
@@ -341,85 +341,88 @@ $(document).ready(function(){
                 <!-- // 201228 E : 작업부분 -->
                 <!-- //lnb -->
                 <!-- sub contents -->
-                <div class="sub_contents">
-                    <!-- <h3 class="page_title mgt0"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/common/tit_member_faq.gif" alt="회원 FAQ" /></h3> -->
-                    <h3 class="page_title mgt0">통합포인트/예치금/쿠폰 FAQ</h3>
-                    <!-- search -->
-                    <div class="search_box02">
-                        <form method="get" action="/ht/help/faqListC0391" name="faqSearchForm">
-                            <fieldset>
-                                <legend>회원 FAQ 검색</legend>
-                                <label for="search_faq" class="stit">회원 FAQ 검색</label>
-                                <span class="text_box">
-                                    <input type="text" id="search_faq" name="title" value="" title="검색어 입력"/>
-                                    <a href="#" class="search_btn searchText">
-                                        <span>검색</span>
-                                    </a>
-                                    <span class="exm_txt">검색어를 입력하세요</span>
-                                </span>
-                            </fieldset>
-                        </form>
-                    </div>
-                    <!-- search -->
-                    <!-- tab -->
-                    <!-- 201228 작업부분 -->
-                    <div class="tab1 text_large">
-                        <ul> 
-                            <li><a href="/ht/help/faqListC0401"><span>회원정보</span></a></li>
-                            <li><a href="/ht/help/faqListC0402" class="on" ><span>통합포인트/예치금/쿠폰</span></a></li>
-                            <!-- <li><a href="/ht/help/faqListC0403" ><span>상품문의</span></a></li> -->
-                            <li><a href="/ht/help/faqListC0404" ><span>이벤트</span></a></li> 
-                        </ul>
-                    </div>
-                    <!-- //tab -->
-                    <!-- list -->
-                    <!-- 201228 : S 작업부분 -->
-                    <table class="bbs_list01 tbl_slide">
-                        <caption></caption>
-                        <colgroup><!-- 201228 작업부분 -->
-                            <col width="160" />
-                            <col width="*">
-                        </colgroup>
-                        <thead>
-                            <tr><!-- 201228 작업부분 -->
-                                <!--<th scope="col" class="fir">번호</th>-->
-                                <th scope="col">구분</th>
-                                <th scope="col">제목</th>
-                                <!--<th scope="col" class="last">조회수</th>-->
-                            </tr>
-                        </thead>
+                    <div class="sub_contents">
+                        <h3 class="page_title mgt0">세금계산서/증빙 FAQ</h3>
+                        <!-- search -->
+                        <div class="search_box02">
+                            <form method="get" action="/ht/help/faqListC0391" name="faqSearchForm">
+                                <fieldset>
+                                    <legend>주문 FAQ 검색</legend>
+                                    <label for="search_faq" class="stit">주문 FAQ 검색</label>
+                                    <span class="text_box">
+                                        <input type="text" id="search_faq" name="title" value="" title="검색어 입력"/>
+                                        <a href="#" class="search_btn searchText">
+                                            <span>검색</span>
+                                        </a>
+                                        <span class="exm_txt">검색어를 입력하세요</span>
+                                    </span>
+                                </fieldset>
+                            </form>
+                        </div>
+                        <!-- search -->
+                        <!-- tab -->
+                        <!-- 201228 작업부분 -->
+                        <div class="tab1">
+                            <ul>
+                                <li><a href="/ht/help/faqListC0391"><span>주문결제</span></a></li>
+                                <li><a href="/ht/help/faqListC0392"><span>배송</span></a></li>
+                                <li><a href="/ht/help/faqListC0393"><span>반품/교환/환불</span></a></li>
+                                <li><a href="/ht/help/faqListC0394" class="on"><span>세금계산서/증빙</span></a></li>
+                            </ul>
+                        </div>
+                        <!-- //tab -->
+                        <!-- list -->
+                        <!-- 201228 : S 작업부분 -->
+                        <table class="bbs_list01 tbl_slide">
+                            <caption>주문 FAQ</caption>
+                            <colgroup>
+                                <col width="160"/>
+                                <col width="*">
+                            </colgroup>
+                            <thead>
+                                <tr>
+                                    <!--<th scope="col" class="fir">번호</th>-->
+                                    <th scope="col">구분</th>
+                                    <th scope="col">제목</th>
+                                    <!--<th scope="col" class="last">조회수</th>-->
+                                </tr>
+                            </thead>
                         <tbody>
                             <tr>
                                 <!-- 201228 작업부분 -->
-                                <!-- <td>1</td> -->
-                                <td>통합포인트/쿠폰</td>
-                                <td class="t_left">
-                                    <a href="#faq0" class="click icon_arrow">환불 시 쿠폰/통합포인트는 어떻게 되나요?</a>
-                                    <input type="hidden" value="261"/>
+                                <!-- <td>1</td> --><td>세금계산서/증빙</td>
+                                    <td class="t_left"> <a href="#faq0" class="click">세금계산서를 받고 싶습니다.</a>
+                                    <input type="hidden" value="55"/>
                                 </td>
-                                <!-- 201228 작업부분 --><!-- <td id="faqHit261">306</td> -->
+                                <!-- 201228 작업부분 -->
+                                <!-- <td id="faqHit55">1159</td> -->
                             </tr>
                             <tr class="conts" id="faq0">
                                 <!-- 201228 작업부분 -->
                                 <td colspan="2">
                                     <div class="txt">
-                                        <P>&nbsp;주문 결제 시 사용하신 쿠폰 및 통합포인트는 환불(부분환불) 시, 아래의 기준에 따라 환불 진행됩니다.</P> 
+                                        <P>세금계산서 발행은 마이핫트랙스&gt;주문정보&gt;세금계산서 신청 과 핫트랙스 온라인몰 고객센터를 통해서 발급받으실 수 있습니다.
+                                        </P>
+                                        <P><BR>-. 전자세금계산서 발급은 현금성 거래로 인정되는 수단에 한해서만 가능합니다. (실시간계좌이체, 무통장 송금 주문 건)</P>
+                                        <P>-. 배송비는 주문 내용에 따라 세금계산서 발행 시, 미포함될 수 있습니다.<BR>-. 고객센터를 통한 세금계산서 발행은 전화 (국번없이)1661-1112로 연락을 주신후 신청을 해주시면 발급이 가능합니다.
+                                            <BR></P>
+                                        <P>문의시 사업자등록번호및 주문번호,연락처등을 확인하신후 요청을 해주시면 됩니다.
+                                            <BR></P>
+                                        <P>세금계산서는 이메일 로 보내드리며, 미입금상태의 청구형계산서는 발급을 해드리지 않습니다.
+                                        </P>
                                         <P>&nbsp;</P>
-                                        <P>&nbsp;(품절, 불량 등의 당사 귀책사유 포함)</P>
-                                        <P>&nbsp;</P>
-                                        <P>&nbsp;1) 상품쿠폰 : 쿠폰적용 상품이 취소 될 경우 상품쿠폰 &gt; 포인트 &gt; 기타결제수단 순서로 환불</P>
-                                        <P>&nbsp;</P>
-                                        <P>&nbsp;2) 장바구니쿠폰/통합포인트</P>
-                                        <P>&nbsp;</P>
-                                        <P>&nbsp; - 환불 후 장바구니 금액이 쿠폰 적용 기준보다 낮아질 경우 쿠폰 &gt; 포인트 &gt; 기타결제수단 순서로 환불</P>
-                                        <P>&nbsp;</P>
-                                        <P>&nbsp; - 환불 후 장바구니 금액이 쿠폰 적용 기준보다 높을 경우 포인트 &gt; 기타결제수단 순서로 환불</P>
+                                        <P>단, 부가가치세령 57조 2항에 의거하여 소매업, 음식점업, 숙박업 등을 최종소비자에게 재화 또는 용역 공급하는 사업자가 현금영수증을 기 발급 받았거나 신용카드로 결제했을 경우에는 세금계산서를 교부하지 않습니다.
+                                        </P>
+                                        <P><BR>-신용카드(부가가치세법 제32조의2제2항에 규정된 신용카드매출전표등을 교부한 경우에는 같은법 시행령
+                                            <BR>제57조제2항의 규정에 의하여 세금계산서를 교부하지 않습니다.)
+                                            <BR></P>
+                                        <P>-현금영수증발행(부가가치세법령 제 57조의 2항)</P>
                                     </div>
                                 </td>
                             </tr>
                         </tbody>
-                    </table>
-                    <!-- //list -->
+                        </table>
+                        <!-- //list -->
                     <!-- paging -->
                     <div class="paging cs mgt40">
                         <a title="맨 처음 페이지로 이동" href="/ht/help/faqListC0391?page=1" class="first">처음</a>
