--- a/PC/html/new/menu2_5.html
+++ b/PC/html/new/menu2_5.html
@@ -7,7 +7,7 @@
         <meta http-equiv="Content-Style-Type" content="text/css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=950">
-        <title>포장서비스 | 서비스안내 | 고객센터 - HOTTRACKS</title>
+        <title>제휴/할인카드 | 서비스안내 | 고객센터 - HOTTRACKS</title>
         <!-- 태그 라이브러리 -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
         <link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
@@ -16,8 +16,7 @@
         <link rel="stylesheet" type="text/css" href="../../css/contents.css">
         <link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
         <link rel="stylesheet" type="text/css" href="../../css/biz/hottweb_yj.css">
-        <link
-        rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
+        <link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
         <!-- 20.12.28 -->
         <link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
         <script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
@@ -608,11 +607,10 @@
                     </script>
                     <!-- lnb -->
                     <!-- 201228 S : 작업부분 -->
-                    <div class="lnb">                        
+                    <div class="lnb">
                         <!-- 201228 작업부분 -->
                         <!-- sub top -->
-                        <div class="page_location">
-                            <h2 class="title">
+                            <div class="page_location"> <h2 class="title">
                                 <a href="javascript:;">고객센터</a>
                             </h2>
                         </div>
@@ -716,27 +714,56 @@
                     <!-- // 201228 E : 작업부분 -->
                     <!-- //lnb -->
                     <!-- sub contents -->
-                        <div class="sub_contents"> <h3 class="page_title mgt0">포장서비스</h3>
-                        <ul class="list_type02">
-                            <li>고급필기구 구매 시, 선물 포장을 원하실 경우 주문서에 메모를 남겨주시면</li>
-                            <li>무료로 선물 포장 서비스를 해드립니다. (카드리지, 병잉크 등 악세서리는 제외)</li>
-                        </ul>
-                        <!-- 201228 작업부분 -->
-                        <div class="box_gray03 mgt40 pd20">
-                            <p class="txt_tip">고급필기구 브랜드별 선물 포장은 아래 이미지를 참조하세요.<br/><span class="stxt">(포장 이미지는 실제와 다소 차이가 있을 수 있습니다.)</span>
-                            </p>
+                        <div class="sub_contents"> <div
+                            class="cardinfo_wrap">
+                            <!-- 201228 작업부분 -->
+                            <h3 class="page_title">제휴/할인카드</h3>
+                            <ul class="list_type02">
+                                <li>핫트랙스의 또 다른 혜택 추가적립 &amp; 할인과 다양한 무이자 할부 혜택!</li>
+                                <li>핫트랙스 온라인몰의 제휴/할인 카드 혜택으로 저렴하게 구매하세요.</li>
+                            </ul>
+                            <h4 class="tit01">교보문고 핫트랙스 롯데카드</h4>
+                            <table class="table03 fz13">
+                                <caption>교보문고 핫트랙스 롯데카드</caption>
+                                <colgroup>
+                                    <col width="33%"/>
+                                    <col width="*"/>
+                                    <col width="33%"/>
+                                </colgroup>
+                                <thead>
+                                    <tr>
+                                        <th scope="col">전월청구서상 해당카드</th>
+                                        <th scope="col">할인율</th>
+                                        <th scope="col">월할인한도 (대상가맹점통합한도)</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>30만원 이상</td>
+                                        <td>10%</td>
+                                        <td>1만원</td>
+                                    </tr>
+                                    <tr>
+                                        <td>60만원 이상</td>
+                                        <td>25%</td>
+                                        <td>2만원</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <div class="box_gray03">
+                                <h5 class="txt_tip">단 2만원 이상 결제시</h5>
+                                <ul class="list_type02 mgt20">
+                                    <li>가) 할인대상 매출금액은 전월청구서상 이용금액 제외
+                                    </li>
+                                    <li>나) 할인대상 가맹점 : 교보문고/핫트랙스 온라인/오프라인 전매장<br/>예) 전월카드사용실적이 60만원이상일 경우 교보문고/핫트랙스 온/오프 매장 구매실적의 25%할인(최대할인한도 2만원)</li>
+                                </ul>
+                                <div class="img_card"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/img_card.gif" alt=""/></div>
+                            </div>
+                            <div class="btn_area t_center mgt35">
+                                <a href="http://www.lottecard.co.kr/app/view/if/gate.jsp?b_id=11129_11195_11443&vt_cd_knd_c=P02528-A02528" target="_lotte1" class="btn_type07">일반 신청</a>
+                                <a href="http://www.lottecard.co.kr/app/view/if/gate.jsp?b_id=11130_11196_11444&vt_cd_knd_c=P02529-A02529" target="_lotte2" class="btn_type07">바로DC 신청</a>
+                            </div>
                         </div>
-                        <ul class="sv_packing">
-                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing01.gif" alt="PARKER"/></li>
-                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing02.gif" alt="WATERMAN"/></li>
-                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing03.gif" alt="CROSS"/></li>
-                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing04.gif" alt="SHEAFFER"/></li>
-                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing05.gif" alt="Pelikan"/></li>
-                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing06.gif" alt="FABER-CASTELL"/></li>
-                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing07.gif" alt="GRAF VON FABER-CASTELL"/></li>
-                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing08.gif" alt="ONLINE"/></li>
-                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing09.gif" alt="AURORA"/></li>
-                        </ul>
                     </div>
                     <!-- //sub contents -->
                 </div>
