--- a/PC/html/new/menu3_4.html
+++ b/PC/html/new/menu3_4.html
@@ -2,61 +2,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ko" xml:lang="ko">
 <head>
     <!-- 태그 라이브러리 -->
-    
-
-
-
-
-
-
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Script-Type" content="text/javascript">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=950">
-    <title>세금계산서/증빙 | 주문FAQ | 고객센터 - HOTTRACKS</title>    
-<!-- 태그 라이브러리 -->
-
-
-
-
-
-
-
-
-
-
-<link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
-
-<link rel="apple-touch-icon-precomposed" href="../../images/ico_app.png" />
-<link rel="apple-touch-startup-image" href="../../images/ico_app.png">
-
-<link rel="stylesheet" type="text/css" href="../../css/common.css">
-<link rel="stylesheet" type="text/css" href="../../css/layout.css">
-<link rel="stylesheet" type="text/css" href="../../css/contents.css">
-<link rel="stylesheet" type="text/css" href="../../css/shop.css">
-<link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
-<link rel="stylesheet" type="text/css" href="../../css/biz/hottweb_yj.css">
-<link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
-<!-- 20.12.28 -->
-<link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
-
-<script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="../../js/jquery.lazyload.min.js"></script>
-<script type="text/javascript" src="../../js/m_contents.js"></script>
-<script type="text/javascript" src="../../js/music.js"></script>
-<script type="text/javascript" src="../../js/musicPlayer.js"></script>
-<script type="text/javascript" src="../../scripts/common"></script>
-<script type="text/javascript" src="../../js/ht.common.utils.1.0.0.js"></script>
-<script type="text/javascript" src="../../js/ht.menu.topGnb.1.0.0.js"></script>
-<script type="text/javascript" src="../../js/biz/jquery/swiper.min.js"></script>
-<script type="text/javascript" src="../../js/biz/common_v2.js"></script>
-<script type="text/javascript" src="../../js/biz/hott.js"></script>
-<script type="text/javascript" src="../../js/biz/jquery/jquery.easing.1.3.min.js"></script>
-<script type="text/javascript" src="../../js/biz/jquery/TweenMax.min.js"></script>
-<script type="text/javascript" src="../../js/biz/ht.menu.bizTopGnb.1.0.0.js"></script>
-<script type="text/javascript" src="../../js/biz/jquery/jquery.bxslider.min.js"></script>
-<script type="text/javascript" src="../../js/biz/jquery/slick.min.js"></script>
+    <title>이벤트 | 회원FAQ | 고객센터 - HOTTRACKS</title>
+    <link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
+    <link rel="apple-touch-icon-precomposed" href="../../images/ico_app.png" />
+    <link rel="apple-touch-startup-image" href="../../images/ico_app.png">
+    <link rel="stylesheet" type="text/css" href="../../css/common.css">
+    <link rel="stylesheet" type="text/css" href="../../css/layout.css">
+    <link rel="stylesheet" type="text/css" href="../../css/contents.css">
+    <link rel="stylesheet" type="text/css" href="../../css/shop.css">
+    <link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
+    <link rel="stylesheet" type="text/css" href="../../css/biz/hottweb_yj.css">
+    <link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
+    <!-- 20.12.28 -->
+    <link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
+    <script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../../js/m_contents.js"></script>
+    <script type="text/javascript" src="../../js/biz/common_v2.js"></script>
+    <script type="text/javascript" src="../../js/biz/hott.js"></script>
+    <script type="text/javascript" src="../../js/biz/jquery/jquery.easing.1.3.min.js"></script>
+    <script type="text/javascript" src="../../js/biz/jquery/TweenMax.min.js"></script>
+    <script type="text/javascript" src="../../js/biz/jquery/jquery.bxslider.min.js"></script>
+    <script type="text/javascript" src="../../js/biz/jquery/slick.min.js"></script>
 
 <!-- 데이타 스토리  script--> 
 <script type="text/javascript">
@@ -84,8 +55,12 @@
             var selectHref = $(this).attr("href");
             if ($(selectHref).hasClass("on")) {
                 $(selectHref).removeClass("on");
+                // 210119 수정
+                $(this).removeClass('icon_active');
             } else {
                 $(selectHref).addClass("on");
+                // 210119 수정
+                $(this).addClass('icon_active');
                 var seq = $(this).siblings("input").val();
                 var hit = $("#faqHit" + seq);
                 var hitVal = parseInt(hit.text()) + 1;
@@ -147,21 +122,100 @@ $(document).ready(function(){
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <!-- 상단부분은 너무 길이가 많고 현재 작업에서는 필요하지 않아 이미지로 대체하여 보여주기용으로만 넣었습니다.  -->
-    <div style="text-align: center;">
-        <img src="../../images/new/@img_banner.png" alt=""> 
-    </div>
-
     <!-- 201228 S : id="content 에 class="orderandpay" 넣어주세요 -->
     <div id="wrap" class="content_new">            
         <!-- header -->
         <div id="header">
-            <!-- 상단부분은 너무 길이가 많고 현재 작업에서는 필요하지 않아 이미지로 대체하여 보여주기용으로만 넣었습니다.  -->
-            <div style="text-align: center;">
-                <img src="../../images/new/@img_gnb.png" alt=""> 
+            <!-- util menu -->
+            <div class="util_menu">
+                <ul>
+
+                    <li><a href="#n" __onclick="login()">로그인</a></li>
+                    <li><a href="#n" __onclick="goMemJoin()">회원가입</a></li>
+
+                    <li><a href="#n">고객센터</a></li>
+                    <li><a href="#n">매장안내</a></li>
+                    <li><a href="#n">팬사인회</a></li>
+                </ul>
             </div>
+            <!--// util menu -->
+            <!-- gnb -->
+            <nav id="gnb">
+                <div class="header_wrap">
+                    <h1 class="g_logo"><a href="#n">HOTTRACKS</a></h1>
+                    <div class="g_search">
+                        <form name="gnbSearchForm" action="/ht/biz/bizSearchMain" method="post" onsubmit="return false;">
+                            <div class="form_select">
+                                <select id="gnbSearchMenu" name="gnbSearchMenu">
+                                    <option value='GIFT'>문구/기프트</option>
+                                    <option value='RECORD'>음반</option>
+                                </select>
+                            </div>
+                            <div class="form_search">
+                                <input type="text" placeholder="샤오미를 쓰는 이유" name="searchTerm" value="">
+                                <a href="#" class="btn_search" __onclick="gnbSrchFrm();return false;"></a>
+                            </div>
+                        </form>
+                        <div class="keyword_wrap" id="ticker">
+                            <a href="#n" __onclick="gnbSrchKerword('카드 지갑');return false;">
+                                <em class="font_t">1</em>
+                                <p>카드 지갑</p>
+                                <!-- ▲ up , ▼ down : class 추가 -->
+
+                                <span class="txt"><strong>NEW</strong></span>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="g_menu">
+                        <ul>
+                            <li class="icon_my">
+
+                                <a href="#n" __onclick="login()"><img src="../../images/biz/common/icon_my.png" alt=""></a>
+
+                            </li>
+                            <li class="icon_today">
+                                <a href="#n">
+                                    <img src="../../images/biz/common/icon_today.png" alt="">
+                                    <em>오늘,<strong>혜택</strong></em>
+                                </a>
+                            </li>
+                            <li class="icon_cart">
+                                <a href="#n">
+                                    <img src="../../images/biz/common/icon_cart.png" alt="">
+                                    <em class="font_t bizCartCount"></em>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="gnb_wrap">
+                    <div class="inner">
+                        <div class="category_wrap">
+                            <div class="btn_category">
+                                <a href="#">카테고리</a>
+                            </div>
+                        </div>
+                        <ul class="gnb_menu">
+                            <li><a href="#n">다이어리<em></em></a></li>
+                            <li><a href="#n">음반<em></em></a></li>
+
+                            <li><a id="gnbBest" href="#n">베스트</a></li>
+                            <li><a id="gnbFree" href="#n">무료배송</a></li>
+                            <li><a id="gnbNew" href="#n">신상품</a></li>
+                            <li><a id="gnbSale" href="#n">세일</a></li>
+                            <li><a href="#n">이벤트</a></li>
+                        </ul>
+                        <ul class="sub_menu">
+                            <li><a href="#n">개인의취향</a></li>
+                            <li><a href="#n">이럴 때,</a></li>
+                            <li><a href="#n">아지트</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
-        <!--// header -->    
+        <!--// header -->
         <!-- 201228 S : id="content 에 class="orderandpay" 넣어주세요 -->
         <!-- Container -->
         <div id="container">
@@ -180,7 +234,8 @@ $(document).ready(function(){
                 <div class="lnb">  
                     <!-- 201228 작업부분 -->
                     <!-- sub top -->
-                        <div class="page_location"> <h2 class="title">
+                    <div class="page_location">
+                        <h2 class="title">
                             <a href="javascript:;">고객센터</a>
                         </h2>
                     </div>
@@ -284,88 +339,62 @@ $(document).ready(function(){
                 <!-- // 201228 E : 작업부분 -->
                 <!-- //lnb -->
                 <!-- sub contents -->
-                    <div class="sub_contents">
-                        <h3 class="page_title mgt0">세금계산서/증빙 FAQ</h3>
-                        <!-- search -->
-                        <div class="search_box02">
-                            <form method="get" action="/ht/help/faqListC0391" name="faqSearchForm">
-                                <fieldset>
-                                    <legend>주문 FAQ 검색</legend>
-                                    <label for="search_faq" class="stit">주문 FAQ 검색</label>
-                                    <span class="text_box">
-                                        <input type="text" id="search_faq" name="title" value="" title="검색어 입력"/>
-                                        <a href="#" class="search_btn searchText">
-                                            <span>검색</span>
-                                        </a>
-                                        <span class="exm_txt">검색어를 입력하세요</span>
-                                    </span>
-                                </fieldset>
-                            </form>
-                        </div>
-                        <!-- search -->
-                        <!-- tab -->
-                        <!-- 201228 작업부분 -->
-                        <div class="tab1">
-                            <ul>
-                                <li><a href="/ht/help/faqListC0391"><span>주문결제</span></a></li>
-                                <li><a href="/ht/help/faqListC0392"><span>배송</span></a></li>
-                                <li><a href="/ht/help/faqListC0393"><span>반품/교환/환불</span></a></li>
-                                <li><a href="/ht/help/faqListC0394" class="on"><span>세금계산서/증빙</span></a></li>
-                            </ul>
-                        </div>
-                        <!-- //tab -->
-                        <!-- list -->
-                        <!-- 201228 : S 작업부분 -->
-                        <table class="bbs_list01 tbl_slide">
-                            <caption>주문 FAQ</caption>
-                            <colgroup>
-                                <col width="160"/>
-                                <col width="*">
-                            </colgroup>
-                            <thead>
-                                <tr>
-                                    <!--<th scope="col" class="fir">번호</th>-->
-                                    <th scope="col">구분</th>
-                                    <th scope="col">제목</th>
-                                    <!--<th scope="col" class="last">조회수</th>-->
-                                </tr>
-                            </thead>
-                        <tbody>
+                <div class="sub_contents">
+                    <!-- <h3 class="page_title mgt0"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/common/tit_member_faq.gif" alt="회원 FAQ" /></h3> -->
+                    <h3 class="page_title mgt0">이벤트 FAQ</h3>
+                    <!-- search -->
+                    <div class="search_box02">
+                        <form method="get" action="/ht/help/faqListC0391" name="faqSearchForm">
+                            <fieldset>
+                                <legend>회원 FAQ 검색</legend>
+                                <label for="search_faq" class="stit">회원 FAQ 검색</label>
+                                <span class="text_box">
+                                    <input type="text" id="search_faq" name="title" value="" title="검색어 입력"/>
+                                    <a href="#" class="search_btn searchText">
+                                        <span>검색</span>
+                                    </a>
+                                    <span class="exm_txt">검색어를 입력하세요</span>
+                                </span>
+                            </fieldset>
+                        </form>
+                    </div>
+                    <!-- search -->
+                    <!-- tab -->
+                    <!-- 201228 작업부분 -->
+                    <div class="tab1 text_large">
+                        <ul> 
+                            <li><a href="/ht/help/faqListC0401"><span>회원정보</span></a></li>
+                            <li><a href="/ht/help/faqListC0402"><span>통합포인트/예치금/쿠폰</span></a></li>
+                            <!-- <li><a href="/ht/help/faqListC0403" ><span>상품문의</span></a></li> -->
+                            <li><a href="/ht/help/faqListC0404" class="on"><span>이벤트</span></a></li> 
+                        </ul>
+                    </div>
+                    <!-- //tab -->
+                    <!-- list -->
+                    <!-- 201228 : S 작업부분 -->
+                    <table class="bbs_list01 tbl_slide">
+                        <caption></caption>
+                        <colgroup>
+                            <!-- 201228 작업부분 -->
+                            <col width="160"/>
+                            <col width="*">
+                        </colgroup>
+                        <thead>
                             <tr>
                                 <!-- 201228 작업부분 -->
-                                <!-- <td>1</td> --><td>세금계산서/증빙</td>
-                                    <td class="t_left"> <a href="#faq0" class="click">세금계산서를 받고 싶습니다.</a>
-                                    <input type="hidden" value="55"/>
-                                </td>
-                                <!-- 201228 작업부분 -->
-                                <!-- <td id="faqHit55">1159</td> -->
+                                <!--<th scope="col" class="fir">번호</th>-->
+                                <th scope="col"> 구분</th>
+                                <th scope="col">제목</th>
+                                <!--<th scope="col" class="last">조회수</th>-->
                             </tr>
-                            <tr class="conts" id="faq0">
-                                <!-- 201228 작업부분 -->
-                                <td colspan="2">
-                                    <div class="txt">
-                                        <P>세금계산서 발행은 마이핫트랙스&gt;주문정보&gt;세금계산서 신청 과 핫트랙스 온라인몰 고객센터를 통해서 발급받으실 수 있습니다.
-                                        </P>
-                                        <P><BR>-. 전자세금계산서 발급은 현금성 거래로 인정되는 수단에 한해서만 가능합니다. (실시간계좌이체, 무통장 송금 주문 건)</P>
-                                        <P>-. 배송비는 주문 내용에 따라 세금계산서 발행 시, 미포함될 수 있습니다.<BR>-. 고객센터를 통한 세금계산서 발행은 전화 (국번없이)1661-1112로 연락을 주신후 신청을 해주시면 발급이 가능합니다.
-                                            <BR></P>
-                                        <P>문의시 사업자등록번호및 주문번호,연락처등을 확인하신후 요청을 해주시면 됩니다.
-                                            <BR></P>
-                                        <P>세금계산서는 이메일 로 보내드리며, 미입금상태의 청구형계산서는 발급을 해드리지 않습니다.
-                                        </P>
-                                        <P>&nbsp;</P>
-                                        <P>단, 부가가치세령 57조 2항에 의거하여 소매업, 음식점업, 숙박업 등을 최종소비자에게 재화 또는 용역 공급하는 사업자가 현금영수증을 기 발급 받았거나 신용카드로 결제했을 경우에는 세금계산서를 교부하지 않습니다.
-                                        </P>
-                                        <P><BR>-신용카드(부가가치세법 제32조의2제2항에 규정된 신용카드매출전표등을 교부한 경우에는 같은법 시행령
-                                            <BR>제57조제2항의 규정에 의하여 세금계산서를 교부하지 않습니다.)
-                                            <BR></P>
-                                        <P>-현금영수증발행(부가가치세법령 제 57조의 2항)</P>
-                                    </div>
-                                </td>
+                        </thead>
+                        <tbody>
+                            <tr><!-- 201228 작업부분 -->
+                                <td colspan="2" class="no_data">등록된 FAQ가 없습니다.</td>
                             </tr>
                         </tbody>
-                        </table>
-                        <!-- //list -->
+                    </table>
+                    <!-- //list -->
                     <!-- paging -->
                     <div class="paging cs mgt40">
                         <a title="맨 처음 페이지로 이동" href="/ht/help/faqListC0391?page=1" class="first">처음</a>
