--- a/PC/html/new/menu4_2.html
+++ b/PC/html/new/menu4_2.html
@@ -1,62 +1,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTDXHTML1.0Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ko" xml:lang="ko">
 <head>
-    <!-- 태그 라이브러리 -->
-    
-
-
-
-
-
-
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta http-equiv="Content-Script-Type" content="text/javascript">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=950">
-    <title>통합포인트/예치금/쿠폰 | 회원FAQ | 고객센터 - HOTTRACKS</title>
-<!-- 태그 라이브러리 -->
-
-
-
-
-
-
-
-
-
-
-<link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
-
-<link rel="apple-touch-icon-precomposed" href="../../images/ico_app.png" />
-<link rel="apple-touch-startup-image" href="../../images/ico_app.png">
-
-<link rel="stylesheet" type="text/css" href="../../css/common.css">
-<link rel="stylesheet" type="text/css" href="../../css/layout.css">
-<link rel="stylesheet" type="text/css" href="../../css/contents.css">
-<link rel="stylesheet" type="text/css" href="../../css/shop.css">
-<link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
-<link rel="stylesheet" type="text/css" href="../../css/biz/hottweb_yj.css">
-<link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
-<!-- 20.12.28 -->
-<link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
-
-<script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="../../js/jquery.lazyload.min.js"></script>
-<script type="text/javascript" src="../../js/m_contents.js"></script>
-<script type="text/javascript" src="../../js/music.js"></script>
-<script type="text/javascript" src="../../js/musicPlayer.js"></script>
-<script type="text/javascript" src="../../scripts/common"></script>
-<script type="text/javascript" src="../../js/ht.common.utils.1.0.0.js"></script>
-<script type="text/javascript" src="../../js/ht.menu.topGnb.1.0.0.js"></script>
-<script type="text/javascript" src="../../js/biz/jquery/swiper.min.js"></script>
-<script type="text/javascript" src="../../js/biz/common_v2.js"></script>
-<script type="text/javascript" src="../../js/biz/hott.js"></script>
-<script type="text/javascript" src="../../js/biz/jquery/jquery.easing.1.3.min.js"></script>
-<script type="text/javascript" src="../../js/biz/jquery/TweenMax.min.js"></script>
-<script type="text/javascript" src="../../js/biz/ht.menu.bizTopGnb.1.0.0.js"></script>
-<script type="text/javascript" src="../../js/biz/jquery/jquery.bxslider.min.js"></script>
-<script type="text/javascript" src="../../js/biz/jquery/slick.min.js"></script>
+    <title>사이트이용/장애/기타 | 기타FAQ | 고객센터 - HOTTRACKS</title>
+    <!-- 태그 라이브러리 -->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
+    <link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
+    <link rel="stylesheet" type="text/css" href="../../css/common.css">
+    <link rel="stylesheet" type="text/css" href="../../css/layout.css">
+    <link rel="stylesheet" type="text/css" href="../../css/contents.css">
+    <link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
+    <link rel="stylesheet" type="text/css" href="../../css/biz/hottweb_yj.css">
+    <link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
+    <!-- 20.12.28 -->
+    <link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
+    <script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../../js/m_contents.js"></script>
+    <script type="text/javascript" src="../../js/biz/common_v2.js"></script>
+    <script type="text/javascript" src="../../js/biz/hott.js"></script>
+    <script type="text/javascript" src="../../js/biz/jquery/jquery.easing.1.3.min.js"></script>
+    <script type="text/javascript" src="../../js/biz/jquery/TweenMax.min.js"></script>
+    <script type="text/javascript" src="../../js/biz/jquery/jquery.bxslider.min.js"></script>
+    <script type="text/javascript" src="../../js/biz/jquery/slick.min.js"></script>
 
 <!-- 데이타 스토리  script--> 
 <script type="text/javascript">
@@ -84,8 +53,12 @@
             var selectHref = $(this).attr("href");
             if ($(selectHref).hasClass("on")) {
                 $(selectHref).removeClass("on");
+                // 210119 수정
+                $(this).removeClass('icon_active');
             } else {
                 $(selectHref).addClass("on");
+                // 210119 수정
+                $(this).addClass('icon_active');
                 var seq = $(this).siblings("input").val();
                 var hit = $("#faqHit" + seq);
                 var hitVal = parseInt(hit.text()) + 1;
@@ -147,21 +120,100 @@ $(document).ready(function(){
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <!-- 상단부분은 너무 길이가 많고 현재 작업에서는 필요하지 않아 이미지로 대체하여 보여주기용으로만 넣었습니다.  -->
-    <div style="text-align: center;">
-        <img src="../../images/new/@img_banner.png" alt=""> 
-    </div>
-
     <!-- 201228 S : id="content 에 class="orderandpay" 넣어주세요 -->
     <div id="wrap" class="content_new">            
         <!-- header -->
         <div id="header">
-            <!-- 상단부분은 너무 길이가 많고 현재 작업에서는 필요하지 않아 이미지로 대체하여 보여주기용으로만 넣었습니다.  -->
-            <div style="text-align: center;">
-                <img src="../../images/new/@img_gnb.png" alt=""> 
+            <!-- util menu -->
+            <div class="util_menu">
+                <ul>
+
+                    <li><a href="#n" __onclick="login()">로그인</a></li>
+                    <li><a href="#n" __onclick="goMemJoin()">회원가입</a></li>
+
+                    <li><a href="#n">고객센터</a></li>
+                    <li><a href="#n">매장안내</a></li>
+                    <li><a href="#n">팬사인회</a></li>
+                </ul>
             </div>
+            <!--// util menu -->
+            <!-- gnb -->
+            <nav id="gnb">
+                <div class="header_wrap">
+                    <h1 class="g_logo"><a href="#n">HOTTRACKS</a></h1>
+                    <div class="g_search">
+                        <form name="gnbSearchForm" action="/ht/biz/bizSearchMain" method="post" onsubmit="return false;">
+                            <div class="form_select">
+                                <select id="gnbSearchMenu" name="gnbSearchMenu">
+                                    <option value='GIFT'>문구/기프트</option>
+                                    <option value='RECORD'>음반</option>
+                                </select>
+                            </div>
+                            <div class="form_search">
+                                <input type="text" placeholder="샤오미를 쓰는 이유" name="searchTerm" value="">
+                                <a href="#" class="btn_search" __onclick="gnbSrchFrm();return false;"></a>
+                            </div>
+                        </form>
+                        <div class="keyword_wrap" id="ticker">
+                            <a href="#n" __onclick="gnbSrchKerword('카드 지갑');return false;">
+                                <em class="font_t">1</em>
+                                <p>카드 지갑</p>
+                                <!-- ▲ up , ▼ down : class 추가 -->
+
+                                <span class="txt"><strong>NEW</strong></span>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="g_menu">
+                        <ul>
+                            <li class="icon_my">
+
+                                <a href="#n" __onclick="login()"><img src="../../images/biz/common/icon_my.png" alt=""></a>
+
+                            </li>
+                            <li class="icon_today">
+                                <a href="#n">
+                                    <img src="../../images/biz/common/icon_today.png" alt="">
+                                    <em>오늘,<strong>혜택</strong></em>
+                                </a>
+                            </li>
+                            <li class="icon_cart">
+                                <a href="#n">
+                                    <img src="../../images/biz/common/icon_cart.png" alt="">
+                                    <em class="font_t bizCartCount"></em>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="gnb_wrap">
+                    <div class="inner">
+                        <div class="category_wrap">
+                            <div class="btn_category">
+                                <a href="#">카테고리</a>
+                            </div>
+                        </div>
+                        <ul class="gnb_menu">
+                            <li><a href="#n">다이어리<em></em></a></li>
+                            <li><a href="#n">음반<em></em></a></li>
+
+                            <li><a id="gnbBest" href="#n">베스트</a></li>
+                            <li><a id="gnbFree" href="#n">무료배송</a></li>
+                            <li><a id="gnbNew" href="#n">신상품</a></li>
+                            <li><a id="gnbSale" href="#n">세일</a></li>
+                            <li><a href="#n">이벤트</a></li>
+                        </ul>
+                        <ul class="sub_menu">
+                            <li><a href="#n">개인의취향</a></li>
+                            <li><a href="#n">이럴 때,</a></li>
+                            <li><a href="#n">아지트</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
-        <!--// header -->    
+        <!--// header -->
         <!-- 201228 S : id="content 에 class="orderandpay" 넣어주세요 -->
         <!-- Container -->
         <div id="container">
@@ -180,8 +232,7 @@ $(document).ready(function(){
                 <div class="lnb">  
                     <!-- 201228 작업부분 -->
                     <!-- sub top -->
-                    <div class="page_location">
-                        <h2 class="title">
+                        <div class="page_location"> <h2 class="title">
                             <a href="javascript:;">고객센터</a>
                         </h2>
                     </div>
@@ -286,14 +337,14 @@ $(document).ready(function(){
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents">
-                    <!-- <h3 class="page_title mgt0"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/common/tit_member_faq.gif" alt="회원 FAQ" /></h3> -->
-                    <h3 class="page_title mgt0">통합포인트/예치금/쿠폰 FAQ</h3>
+                    <!--  <h3 class="page_title mgt0"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/common/tit_etc_faq.gif" alt="기타 FAQ" /></h3> -->
+                    <h3 class="page_title mgt0">사이트이용/장애/기타 FAQ</h3>
                     <!-- search -->
                     <div class="search_box02">
                         <form method="get" action="/ht/help/faqListC0391" name="faqSearchForm">
                             <fieldset>
-                                <legend>회원 FAQ 검색</legend>
-                                <label for="search_faq" class="stit">회원 FAQ 검색</label>
+                                <legend>기타 FAQ 검색</legend>
+                                <label for="search_faq" class="stit">기타 FAQ 검색</label>
                                 <span class="text_box">
                                     <input type="text" id="search_faq" name="title" value="" title="검색어 입력"/>
                                     <a href="#" class="search_btn searchText">
@@ -309,10 +360,9 @@ $(document).ready(function(){
                     <!-- 201228 작업부분 -->
                     <div class="tab1 text_large">
                         <ul> 
-                            <li><a href="/ht/help/faqListC0401"><span>회원정보</span></a></li>
-                            <li><a href="/ht/help/faqListC0402" class="on" ><span>통합포인트/예치금/쿠폰</span></a></li>
-                            <!-- <li><a href="/ht/help/faqListC0403" ><span>상품문의</span></a></li> -->
-                            <li><a href="/ht/help/faqListC0404" ><span>이벤트</span></a></li> 
+                            <li><a href="/ht/help/faqListC0411"><span>영업점</span></a></li>
+                            <li><a href="/ht/help/faqListC0412" class="on"><span>사이트이용/장애/기타</span></a></li> 
+                            <!-- <li><a href="/ht/help/faqListC0413" ><span>기타</span></a></li>  -->
                         </ul>
                     </div>
                     <!-- //tab -->
@@ -336,28 +386,21 @@ $(document).ready(function(){
                             <tr>
                                 <!-- 201228 작업부분 -->
                                 <!-- <td>1</td> -->
-                                <td>통합포인트/쿠폰</td>
-                                <td class="t_left">
-                                    <a href="#faq0" class="click">환불 시 쿠폰/통합포인트는 어떻게 되나요?</a>
-                                    <input type="hidden" value="261"/>
+                                <td>사이트이용/장애</td>
+                                    <td class="t_left"> <a href="#faq0" class="click icon_arrow">법인카드 사용시 오류가 발생합니다.</a>
+                                    <input type="hidden" value="123"/>
                                 </td>
-                                <!-- 201228 작업부분 --><!-- <td id="faqHit261">306</td> -->
+                                <!-- 201228 작업부분 -->
+                                <!-- <td id="faqHit123">240</td> -->
                             </tr>
                             <tr class="conts" id="faq0">
                                 <!-- 201228 작업부분 -->
                                 <td colspan="2">
                                     <div class="txt">
-                                        <P>&nbsp;주문 결제 시 사용하신 쿠폰 및 통합포인트는 환불(부분환불) 시, 아래의 기준에 따라 환불 진행됩니다.</P> 
+                                        <P><BR>법인카드 결제 시에도 국내개인카드 결제와 동일하게 각카드사에 따라 ISP나 안심인증을 통해 결제가 이루어집니다.
+                                        </P>
+                                        <P><BR>ISP나 안심인증 결제가 어려우신경우 저희 고객센터(1661-1112)으로 문의를 주시길 바랍니다.</P>
                                         <P>&nbsp;</P>
-                                        <P>&nbsp;(품절, 불량 등의 당사 귀책사유 포함)</P>
-                                        <P>&nbsp;</P>
-                                        <P>&nbsp;1) 상품쿠폰 : 쿠폰적용 상품이 취소 될 경우 상품쿠폰 &gt; 포인트 &gt; 기타결제수단 순서로 환불</P>
-                                        <P>&nbsp;</P>
-                                        <P>&nbsp;2) 장바구니쿠폰/통합포인트</P>
-                                        <P>&nbsp;</P>
-                                        <P>&nbsp; - 환불 후 장바구니 금액이 쿠폰 적용 기준보다 낮아질 경우 쿠폰 &gt; 포인트 &gt; 기타결제수단 순서로 환불</P>
-                                        <P>&nbsp;</P>
-                                        <P>&nbsp; - 환불 후 장바구니 금액이 쿠폰 적용 기준보다 높을 경우 포인트 &gt; 기타결제수단 순서로 환불</P>
                                     </div>
                                 </td>
                             </tr>
