--- a/PC/html/new/menu7_4.html
+++ b/PC/html/new/menu7_4.html
@@ -7,7 +7,7 @@
         <meta http-equiv="Content-Style-Type" content="text/css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=950">
-        <title>각인서비스 | 서비스안내 | 고객센터 - HOTTRACKS</title>
+        <title>포장서비스 | 서비스안내 | 고객센터 - HOTTRACKS</title>
         <!-- 태그 라이브러리 -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
         <link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
@@ -302,60 +302,27 @@
                     <!-- //lnb -->
                     <!-- sub contents -->
                     <div class="sub_contents">
-                        <h3 class="page_title mgt0">각인 서비스</h3>
+                        <h3 class="page_title mgt0">포장서비스</h3>
                         <ul class="list_type02">
-                            <li>고급필기구 단품가 2만원 이상 구매하시는 모든 분께는 각인을 무료로 제작해 드립니다.</li>
-                            <li>(단, 제품 특성 및 브랜드별로 각인이 되지 않는 경우도 있습니다.)</li>
-                            <li>고급필기구 단품가 2만원 미만 구매 시 유료 각인비는 5,000원 입니다.</li>
+                            <li>고급필기구 구매 시, 선물 포장을 원하실 경우 주문서에 메모를 남겨주시면</li>
+                            <li>무료로 선물 포장 서비스를 해드립니다. (카드리지, 병잉크 등 악세서리는 제외)</li>
                         </ul>
+                        <!-- 201228 작업부분 -->
                         <div class="box_gray03 mgt40 pd20">
-                            <p class="txt_tip">글자체별 디자인은 아래를 참고하셔서 주문 시 정확하게 입력해 주시기 바랍니다.<br/><span class="stxt">예시: 영문 풀네임 각인 – Hong Kil Dong (필기체)</span>
+                            <p class="txt_tip">고급필기구 브랜드별 선물 포장은 아래 이미지를 참조하세요.<br/><span class="stxt">(포장 이미지는 실제와 다소 차이가 있을 수 있습니다.)</span>
                             </p>
                         </div>
-                        <div class="sv_carving">
-                            <div class="f_left">
-                                <h4 class="stit">영문서체</h4>
-                                <div class="con">
-                                    <ul class="hidden_obj">
-                                        <li>Hong Kil Dong 필기체</li>
-                                        <li>Hong Kil Dong Fiolex girls</li>
-                                        <li>Hong Kil Dong 모노라임 크로스바</li>
-                                        <li>Hong Kil Dong 바탕체</li>
-                                        <li>Hong Kil Dong 고딕사체</li>
-                                        <li>Hong Kil Dong 고딕체</li>
-                                        <li>Hong Kil Dong 로마체</li>
-                                        <li>Hong Kil Dong 슬로건ocp</li>
-                                        <li>K.D Hong 필기체</li>
-                                        <li>K.D Hong Fiolex girls</li>
-                                        <li>K.D Hong 모노라임 크로스바</li>
-                                        <li>K.D Hong 바탕체</li>
-                                        <li>K.D Hong 고딕사체</li>
-                                        <li>K.D Hong 고딕체</li>
-                                        <li>K.D Hong 로마체</li>
-                                        <li>K.D Hong 슬로건ocp</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="f_right">
-                                <h4 class="stit">한글/한문서체</h4>
-                                <div class="con">
-                                    <ul class="hidden_obj">
-                                        <li>홍길동 바탕체</li>
-                                        <li>홍길동 필기체</li>
-                                        <li>홍길동 휴면옛체</li>
-                                        <li>홍길동 고딕체</li>
-                                        <li>홍길동 해서체</li>
-                                        <li>홍길동 양제난초체</li>
-                                        <li>홍길동 펜흘림</li>
-                                        <li>홍길동 다운필기</li>
-                                        <li>홍길동 고딕체</li>
-                                        <li>홍길동 휴면옛체</li>
-                                        <li>홍길동 바탕체</li>
-                                        <li>홍길동 한양해서체</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+                        <ul class="sv_packing">
+                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing01.gif" alt="PARKER"/></li>
+                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing02.gif" alt="WATERMAN"/></li>
+                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing03.gif" alt="CROSS"/></li>
+                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing04.gif" alt="SHEAFFER"/></li>
+                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing05.gif" alt="Pelikan"/></li>
+                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing06.gif" alt="FABER-CASTELL"/></li>
+                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing07.gif" alt="GRAF VON FABER-CASTELL"/></li>
+                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing08.gif" alt="ONLINE"/></li>
+                            <li><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/packing09.gif" alt="AURORA"/></li>
+                        </ul>
                     </div>
                     <!-- //sub contents -->
                     <!--// 201228 : E 작업부분 -->
