--- a/PC/html/new/menu7_5.html
+++ b/PC/html/new/menu7_5.html
@@ -7,7 +7,7 @@
         <meta http-equiv="Content-Style-Type" content="text/css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=950">
-        <title>각인서비스 | 서비스안내 | 고객센터 - HOTTRACKS</title>
+        <title>제휴/할인카드 | 서비스안내 | 고객센터 - HOTTRACKS</title>
         <!-- 태그 라이브러리 -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
         <link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
@@ -302,58 +302,52 @@
                     <!-- //lnb -->
                     <!-- sub contents -->
                     <div class="sub_contents">
-                        <h3 class="page_title mgt0">각인 서비스</h3>
-                        <ul class="list_type02">
-                            <li>고급필기구 단품가 2만원 이상 구매하시는 모든 분께는 각인을 무료로 제작해 드립니다.</li>
-                            <li>(단, 제품 특성 및 브랜드별로 각인이 되지 않는 경우도 있습니다.)</li>
-                            <li>고급필기구 단품가 2만원 미만 구매 시 유료 각인비는 5,000원 입니다.</li>
-                        </ul>
-                        <div class="box_gray03 mgt40 pd20">
-                            <p class="txt_tip">글자체별 디자인은 아래를 참고하셔서 주문 시 정확하게 입력해 주시기 바랍니다.<br/><span class="stxt">예시: 영문 풀네임 각인 – Hong Kil Dong (필기체)</span>
-                            </p>
-                        </div>
-                        <div class="sv_carving">
-                            <div class="f_left">
-                                <h4 class="stit">영문서체</h4>
-                                <div class="con">
-                                    <ul class="hidden_obj">
-                                        <li>Hong Kil Dong 필기체</li>
-                                        <li>Hong Kil Dong Fiolex girls</li>
-                                        <li>Hong Kil Dong 모노라임 크로스바</li>
-                                        <li>Hong Kil Dong 바탕체</li>
-                                        <li>Hong Kil Dong 고딕사체</li>
-                                        <li>Hong Kil Dong 고딕체</li>
-                                        <li>Hong Kil Dong 로마체</li>
-                                        <li>Hong Kil Dong 슬로건ocp</li>
-                                        <li>K.D Hong 필기체</li>
-                                        <li>K.D Hong Fiolex girls</li>
-                                        <li>K.D Hong 모노라임 크로스바</li>
-                                        <li>K.D Hong 바탕체</li>
-                                        <li>K.D Hong 고딕사체</li>
-                                        <li>K.D Hong 고딕체</li>
-                                        <li>K.D Hong 로마체</li>
-                                        <li>K.D Hong 슬로건ocp</li>
-                                    </ul>
-                                </div>
+                        <h3 class="page_title">제휴/할인카드</h3>
+                            <!-- 201228 작업부분 -->
+                            <ul class="list_type02">
+                                <li>핫트랙스의 또 다른 혜택 추가적립 &amp; 할인과 다양한 무이자 할부 혜택!</li>
+                                <li>핫트랙스 온라인몰의 제휴/할인 카드 혜택으로 저렴하게 구매하세요.</li>
+                            </ul>
+                            <h4 class="tit01">교보문고 핫트랙스 롯데카드</h4>
+                            <table class="table03 fz13">
+                                <caption>교보문고 핫트랙스 롯데카드</caption>
+                                <colgroup>
+                                    <col width="33%"/>
+                                    <col width="*"/>
+                                    <col width="33%"/>
+                                </colgroup>
+                                <thead>
+                                    <tr>
+                                        <th scope="col">전월청구서상 해당카드</th>
+                                        <th scope="col">할인율</th>
+                                        <th scope="col">월할인한도 (대상가맹점통합한도)</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>30만원 이상</td>
+                                        <td>10%</td>
+                                        <td>1만원</td>
+                                    </tr>
+                                    <tr>
+                                        <td>60만원 이상</td>
+                                        <td>25%</td>
+                                        <td>2만원</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <div class="box_gray03 spacebox">
+                                <h5 class="txt_tip">단 2만원 이상 결제시</h5>
+                                <ul class="list_type02 mgt20">
+                                    <li>가) 할인대상 매출금액은 전월청구서상 이용금액 제외
+                                    </li>
+                                    <li>나) 할인대상 가맹점 : 교보문고/핫트랙스 온라인/오프라인 전매장<br/>예) 전월카드사용실적이 60만원이상일 경우 교보문고/핫트랙스 온/오프 매장 구매실적의 25%할인(최대할인한도 2만원)</li>
+                                </ul>
+                                <div class="img_card"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/img_card.gif" alt=""/></div>
                             </div>
-                            <div class="f_right">
-                                <h4 class="stit">한글/한문서체</h4>
-                                <div class="con">
-                                    <ul class="hidden_obj">
-                                        <li>홍길동 바탕체</li>
-                                        <li>홍길동 필기체</li>
-                                        <li>홍길동 휴면옛체</li>
-                                        <li>홍길동 고딕체</li>
-                                        <li>홍길동 해서체</li>
-                                        <li>홍길동 양제난초체</li>
-                                        <li>홍길동 펜흘림</li>
-                                        <li>홍길동 다운필기</li>
-                                        <li>홍길동 고딕체</li>
-                                        <li>홍길동 휴면옛체</li>
-                                        <li>홍길동 바탕체</li>
-                                        <li>홍길동 한양해서체</li>
-                                    </ul>
-                                </div>
+                            <div class="btn_area t_center mgt35">
+                                <a href="http://www.lottecard.co.kr/app/view/if/gate.jsp?b_id=11129_11195_11443&vt_cd_knd_c=P02528-A02528" target="_lotte1" class="btn_type07">일반 신청</a>
+                                <a href="http://www.lottecard.co.kr/app/view/if/gate.jsp?b_id=11130_11196_11444&vt_cd_knd_c=P02529-A02529" target="_lotte2" class="btn_type07">바로DC 신청</a>
                             </div>
                         </div>
                     </div>
