--- a/MOBILE/html/new/listone.html
+++ b/MOBILE/html/new/listone.html
@@ -44,7 +44,7 @@
 <div id="content" class="orderandpay">        
     <!-- content -->
     <!-- 201228 : S 작업부분 -->
-    <div class="customer">
+    <div class="customer cs_direct">
         <p class="info02" style="text-align: left;">
         · 한번 등록한 상담 내용은 수정이 불가능합니다.<br>
         · 수정을 원하시는 경우, 삭제 후 재등록하셔야 합니다.<br>
@@ -62,11 +62,10 @@
             </div>
 
             <div class="btn_area box_flex mt30">
-                <a class="btn btn_type01 btn_orange" href="/m/help/sosCounselMain">1:1 문의하기</a>
+                <a class="btn btn_basic" href="/m/help/sosCounselMain">1:1 문의하기</a>
             </div>
         </div>
     </div>
-    <!-- //paging -->
 </div>
 <!--// 201228 : E 작업부분 -->
 
