--- a/PC/html/new/menu2_3.html
+++ b/PC/html/new/menu2_3.html
@@ -393,7 +393,7 @@ $(document).ready(function(){
                                 <!-- <td>1</td> -->
                                 <td>반품/교환/환불</td>
                                 <td class="t_left">
-                                    <a href="#faq0" class="click">상품을 교환/반품하고 싶습니다. </a>
+                                    <a href="#faq0" class="click icon_arrow">상품을 교환/반품하고 싶습니다. </a>
                                     <input type="hidden" value="281"/>
                                 </td>
                                 <!-- 201228 작업부분 -->
