--- a/PC/html/new/menu2_4.html
+++ b/PC/html/new/menu2_4.html
@@ -391,7 +391,7 @@ $(document).ready(function(){
                             <tr>
                                 <!-- 201228 작업부분 -->
                                 <!-- <td>1</td> --><td>세금계산서/증빙</td>
-                                    <td class="t_left"> <a href="#faq0" class="click">세금계산서를 받고 싶습니다.</a>
+                                    <td class="t_left"> <a href="#faq0" class="click icon_arrow">세금계산서를 받고 싶습니다.</a>
                                     <input type="hidden" value="55"/>
                                 </td>
                                 <!-- 201228 작업부분 -->
