--- a/PC/html/new/menu6_1_01.html
+++ b/PC/html/new/menu6_1_01.html
@@ -516,7 +516,7 @@ $(document).ready(function(){
                                                 <div class="input_wrap">
                                                     <input type="text" name="orderNum" class="width_cs" id="order_num" readonly="readonly">
                                                 </div>
-                                                <a href="./popupSearchOrder.html" onclick="window.open(this.href, '_searchPrdt', 'width=900,height=600,scrollbars=yes');return false;" target="_blank" title="새창에서 열림" class="btn_type01 mgl5">주문선택</a>
+                                                <a href="./popupSearchOrder.html" onclick="window.open(this.href, '_searchPrdt', 'width=900,height=600,scrollbars=yes');return false;" target="_blank" title="새창에서 열림" class="btn_type01 btn_style11">주문선택</a>
                                                 </div>
                                             </div>
                                         </td>
@@ -533,7 +533,7 @@ $(document).ready(function(){
                                                 </div>
                                                 <!-- <a href="javascript://" onclick="searchOrderProduct()" class="btn_type01 mgl5">상품선택</a> -->
                                                 <!-- 경로 수정하여 onclick 사용 해주세요 -->
-                                                <a href="./popupSearchOrderProduct.html" onclick="window.open(this.href, '_searchPrdt', 'width=900,height=600,scrollbars=yes');return false;" target="_blank" title="새창에서 열림" class="btn_type01 mgl5">상품선택</a>
+                                                <a href="./popupSearchOrderProduct.html" onclick="window.open(this.href, '_searchPrdt', 'width=900,height=600,scrollbars=yes');return false;" target="_blank" title="새창에서 열림" class="btn_type01 btn_style11">상품선택</a>
                                             </div>
                                         </td>
                                     </tr>
