--- a/PC/html/new/popupBulkList.html
+++ b/PC/html/new/popupBulkList.html
@@ -571,7 +571,7 @@
                                         <!-- //CD/DVD -->
                                     </ul>
                                 </div>
-                                <div class="paging">
+                                <div class="paging cs">
                                     <a title="맨 처음 페이지로 이동" href="javascript:srchPageMove('1', '')" class="first">처음</a>
                                     <ul>
                                         <li class="active">
