--- a/PC/html/new/popupSearchOrderProduct.html
+++ b/PC/html/new/popupSearchOrderProduct.html
@@ -123,7 +123,7 @@ function selectProduct() {
                     </tbody> 
                 </table>
                 <div class="btn_area t_center mgt30">
-                    <a href="javascript://" onclick="selectProduct()" class="btn_type01">상품 선택</a>
+                    <a href="javascript://" onclick="selectProduct()" class="btn_type03 btn_style11">상품 선택</a>
                 </div>
             </div>
             <a href="javascript:;" onclick="self.close(); return false;" class="tooltip_close">닫기</a>
