--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -989,7 +989,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s4"></td>
       </tr>
-      <tr style='height:29px;'>
+      <!-- <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
        <td class="s14"></td>
         <td class="s15" dir="ltr" colspan="9">
@@ -1009,7 +1009,7 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">5</div></th>
         <td class="s14"></td>
-        <td class="s15" dir="ltr" rowspan="25">고객센터</td>
+        <td class="s15" dir="ltr" rowspan="26">고객센터</td>
         <td class="s16" rowspan="2">고객센터</td>
         <td class="s16" dir="ltr"></td>
         <td class="s10"></td>
@@ -1131,18 +1131,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s4"></td>
       </tr>
-      <!-- <tr style='height:29px;'>
-        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
-        <td class="s14"></td>
-        <td class="s16">상품문의</td>
-        <td class="s10"></td>
-        <td class="s16"></td>
-        <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/menu3_3.html">http://dev.hottracks.co.kr/html/new/menu3_3.html</a></td>
-        <td class="s19" dir="ltr">완료</td>
-        <td class="s16"></td>
-        <td class="s4"></td>
-      </tr> -->
+     
       <tr style='height:29px;'>
         <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
         <td class="s14"></td>
@@ -1220,12 +1209,12 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
         <td class="s14"></td>
-        <td class="s16" dir="ltr" rowspan="4">SOS상담</td>
-        <td class="s16">쇼핑몰 이용 상담</td>
+        <td class="s16" dir="ltr" rowspan="5">SOS상담</td>
+        <td class="s16">SOS상담</td>
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/menu6_01.html">http://dev.hottracks.co.kr/html/new/menu6_01.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/menu6_1.html">http://dev.hottracks.co.kr/html/new/menu6_1.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16">주문내역 팝업,주문상품 조회 팝업</td>
         <td class="s4"></td>
@@ -1250,6 +1239,18 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/popupSearchOrderProduct.html">http://dev.hottracks.co.kr/html/new/popupSearchOrderProduct.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr">쇼핑몰 이용 상담</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/menu6_1_01.html">http://dev.hottracks.co.kr/html/new/menu6_1_01.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1326,7 +1327,7 @@ th.row-headers-background {
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
-      </tr>
+      </tr> -->
     </tbody>
   </table>
 </div>
