--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -1040,12 +1040,13 @@ th.row-headers-background {
         <td class="s20"></td>
         <td class="s25"></td>
       </tr>
-      <tr style="height:29px;">
+
+      <!-- <tr style="height:29px;">
         <th id="587364640R52" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">53</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s15" dir="ltr" rowspan="4">#Contact<br>
+        <td class="s15" dir="ltr" rowspan="6">#Contact<br>
           (고객센터)</td>
-        <td class="s14" >고객센터</td>
+        <td class="s16"  rowspan="6">고객센터</td>
         <td class="s9"></td>
         <td class="s9"></td>
         <td class="s16"></td>
@@ -1057,7 +1058,6 @@ th.row-headers-background {
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s14"></td>
         <td class="s14">공지사항</td>
         <td class="s16">(T)공지사항</td>
         <td class="s16" dir="ltr">목록&amp;상세 (슬라이드 확장)</td>
@@ -1069,7 +1069,6 @@ th.row-headers-background {
       <tr style="height:29px;">
         <th id="587364640R54" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">55</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s14"></td>
         <td class="s16"></td>
         <td class="s16" dir="ltr">(T)이벤트 당첨자</td>
         <td class="s16" dir="ltr">목록&amp;상세 (슬라이드 확장)</td>
@@ -1081,15 +1080,35 @@ th.row-headers-background {
       <tr style="height:29px;">
         <th id="587364640R55" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">56</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s20"></td>
-        <td class="s20" dir="ltr">자주 묻는 질문</td>
-        <td class="s20">목록&amp;상세 (총9개 등록)</td>
-        <td class="s20"></td>
-        <td class="s20"></td>
-        <td class="s23" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listFaq.html">http://devm.hottracks.co.kr/html/new/listFaq.html</a></td>
-        <td class="s24" dir="ltr">완료</td>
+        <td class="s16" dir="ltr">자주 묻는 질문</td>
+        <td class="s16">목록&amp;상세 (총9개 등록)</td>
+        <td class="s16"></td>
+        <td class="s16"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_listFaq.html">http://devm.hottracks.co.kr/html/new/popup_listFaq.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
         <td class="s18"></td>
       </tr>
+      <tr style="height:29px;">
+        <th id="587364640R55" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">56</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s16" dir="ltr" rowspan="2">1대1 문의</td>
+        <td class="s16">1대1 문의</td>
+        <td class="s16"></td>
+        <td class="s16"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_listFaq.html">http://devm.hottracks.co.kr/html/new/popup_listFaq.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s18"></td>
+      </tr>
+      <tr style="height:29px;">
+        <th id="587364640R55" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">56</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s16">팝업</td>
+        <td class="s16"></td>
+        <td class="s16"></td>
+        <td class="s23" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_listFaq.html">http://devm.hottracks.co.kr/html/new/popup_listFaq.html</a></td>
+        <td class="s24" dir="ltr">완료</td>
+        <td class="s18"></td>
+      </tr> -->
     </tbody>
   </table>
 </div>
