--- a/MOBILE/html/new/aaa.html
+++ b/MOBILE/html/new/aaa.html
@@ -17,41 +17,34 @@
 
 <c:set var="tmpKey" value="20200602"/>
 
-<META http-equiv="Expires" content="-1"> 
-<META http-equiv="Pragma" content="no-cache"> 
-<META http-equiv="Cache-Control" content="No-Cache"> 
 
-<meta name="apple-mobile-web-app-capable" content="yes"> 
-<meta name="apple-itunes-app" content="app-id=1129743143">
-<meta name="google-play-app" content="app-id=kr.co.hottracks.m.and">
+<link rel="apple-touch-icon-precomposed" href="../../images/content/ico_app.png" />
+<link rel="apple-touch-startup-image" href="../../images/content/ico_app.png">
+<link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
 
-<link rel="apple-touch-icon-precomposed" href="/images/content/ico_app.png" />
-<link rel="apple-touch-startup-image" href="/images/content/ico_app.png">
-<link href="/images/biz/common/favicon.ico" rel="shortcut icon">
+<link rel="stylesheet" type="text/css" href="../../css/layout.css">
+<link rel="stylesheet" type="text/css" href="../../css/content.css">
+<link rel="stylesheet" type="text/css" href="../../css/common.css">
+<link rel="stylesheet" type="text/css" href="../../css/swiper.min.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/hottm_yj.css">
 
-<link rel="stylesheet" type="text/css" href="/css/layout.css?">
-<link rel="stylesheet" type="text/css" href="/css/content.css?">
-<link rel="stylesheet" type="text/css" href="/css/common.css?">
-<link rel="stylesheet" type="text/css" href="/css/swiper.min.css?">
-<link rel="stylesheet" type="text/css" href="/css/biz/common_v2.css?20210113">
-<link rel="stylesheet" type="text/css" href="/css/biz/hottm_yj.css?">
-
-<script type="text/javascript" src="/js/jquery-1.9.1.min.js?"></script>
-<script type="text/javascript" src="/js/jquery.mobile-events.min.js?"></script>
-<script type="text/javascript" src="/js/jquery.lazyload.min.js?"></script>
-<script type="text/javascript" src="/js/idangerous.swiper.min.js?"></script>
-<script type="text/javascript" src="/js/common.js?"></script>
-<script type="text/javascript" src="/js/front.common.1.1.0.js?"></script>
-<script type="text/javascript" src="/js/front.common.ui.1.0.0.js?"></script>
-<script type="text/javascript" src="/js/kakao.min.v1.23.1.js"></script>
-<script type="text/javascript" src="/scripts/common?"></script>
-<script type="text/javascript" src="/scripts/loadingBar?"></script>
-<script type="text/javascript" src="/scripts/device?"></script>
-<script type="text/javascript" src="/js/swiper.min.js?"></script>
-<script type="text/javascript" src="/js/biz/common_v2.js?"></script>
-<script type="text/javascript" src="/js/biz/m_hott.js?"></script>
-<script type="text/javascript" src="/js/biz/jquery/jquery.easing.1.3.min.js?"></script>
-<script type="text/javascript" src="/js/biz/jquery/TweenMax.min.js?"></script>
+<script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="../../js/jquery.mobile-events.min.js"></script>
+<script type="text/javascript" src="../../js/jquery.lazyload.min.js"></script>
+<script type="text/javascript" src="../../js/idangerous.swiper.min.js"></script>
+<script type="text/javascript" src="../../js/common.js"></script>
+<script type="text/javascript" src="../../js/front.common.1.1.0.js"></script>
+<script type="text/javascript" src="../../js/front.common.ui.1.0.0.js"></script>
+<script type="text/javascript" src="../../js/kakao.min.v1.23.1.js"></script>
+<script type="text/javascript" src="../../scripts/common.js"></script>
+<script type="text/javascript" src="../../scripts/loadingBar.js"></script>
+<script type="text/javascript" src="../../scripts/device.js"></script>
+<script type="text/javascript" src="../../js/swiper.min.js"></script>
+<script type="text/javascript" src="../../js/biz/common_v2.js"></script>
+<script type="text/javascript" src="../../js/biz/m_hott.js"></script>
+<script type="text/javascript" src="../../js/biz/jquery/jquery.easing.1.3.min.js"></script>
+<script type="text/javascript" src="../../js/biz/jquery/TweenMax.min.js"></script>
 
 <!-- 데이타 스토리  script end--> 
 <script type="text/javascript">
