--- a/MOBILE/html/new/cs_main.html
+++ b/MOBILE/html/new/cs_main.html
@@ -55,12 +55,12 @@
             </dl>
             <ul class="cs_button_list">
                 <li>
-                    <a href="#" onclick="window.open('tel:1661-1112');return false;" class="link">
+                    <a href="javascript:;"  class="link">
                         <span>전화걸기</span>
                     </a>
                 </li>
                 <li>
-                    <a href="/m/help/listSosCounsel" class="link">
+                    <a href="javascript:;" class="link">
                         <span>1:1문의</span>
                     </a>
                 </li>
@@ -76,7 +76,9 @@
                         <em>2018.06.11</em>
                     </a>
                     <div class="cont">
-                        <div class="inner"></div>
+                        <div class="inner">
+                            asdfsfd
+                        </div>
                     </div>
                 </li>        
                 <li>
@@ -85,7 +87,9 @@
                         <em>2019.06.03</em>
                     </a>                    
                     <div class="cont">
-                        <div class="inner"></div>
+                        <div class="inner">
+                            asdfsfd
+                        </div>
                     </div>
                 </li>        
                 <li>
@@ -94,7 +98,9 @@
                         <em>2019.06.03</em>
                     </a>                    
                     <div class="cont">
-                        <div class="inner"></div>
+                        <div class="inner">
+                            asdfsfd
+                        </div>
                     </div>
                 </li>
                 <li>
@@ -103,7 +109,9 @@
                         <em>2019.06.03</em>
                     </a>                    
                     <div class="cont">
-                        <div class="inner"></div>
+                        <div class="inner">
+                            asdfsfd
+                        </div>
                     </div>
                 </li>
                 <li>
@@ -112,7 +120,9 @@
                         <em>2019.06.03</em>
                     </a>                    
                     <div class="cont">
-                        <div class="inner"></div>
+                        <div class="inner">
+                            asdfsfd
+                        </div>
                     </div>
                 </li>                
             </ul>
@@ -130,6 +140,9 @@
                         <em>2019.04.26</em>
                     </a>
                     <div class="cont">
+                        <div class="inner">
+                            asdfsfd
+                        </div>
                     </div>
                 </li>           
                 <li>
@@ -138,6 +151,9 @@
                         <em>2019.04.26</em>
                     </a>
                     <div class="cont">
+                        <div class="inner">
+                            asdfsfd
+                        </div>
                     </div>
                 </li>           
                 <li>
@@ -146,6 +162,9 @@
                         <em>2019.04.26</em>
                     </a>
                     <div class="cont">
+                        <div class="inner">
+                            asdfsfd
+                        </div>
                     </div>
                 </li>           
                 <li>
@@ -154,6 +173,9 @@
                         <em>2019.04.26</em>
                     </a>
                     <div class="cont">
+                        <div class="inner">
+                            asdfsfd
+                        </div>
                     </div>
                 </li>
             </ul>
